# allium

./: .RData  .Rhistory  .gitignore  Dockerfile  README.md  environment.yml  modality.py  predict.py  predict_lilljebjorn.py  pyproject.toml  subtype.py  test.py  test_client.py
.github/workflows/: python-package-conda.yml
ALLIUM_models/ALLIUM_DNAm/: model_NSCv2_dnam.pkl
Notebooks_GEX_preprocessing/: 3_FinalData_Python.ipynb
Notebooks_GEX_preprocessing/data/: annotateddata.7z
Notebooks_predictions/: DiscoveryPhase_GEX_Test_data.ipynb  README.md  sub_colors.pkl
allium/: __init__.py  allium_classifier.py  dnam_classifier.py  gex_classifier.py  helpers.py  subtype.py
allium/conf/: subtypes.yml
allium/models/: allium_gex_v1.joblib
conf/: subtypes.yml
data/models/: allium_dnam_imputation_v3.joblib  allium_dnam_v2.joblib  allium_dnam_v3.joblib  allium_gex_v2.joblib  allium_gex_v3.joblib
data/phenotypes/: pheno.allium.lilljebjorn.csv  pheno.allium.tran.csv  pheno.lilljebjorn.csv
data/signatures/: signature_cpgs.csv  signature_cpgs_v2.csv  signature_cpgs_v3.csv  signature_genes_v2.csv  signature_genes_v3.csv
legacy/: README.md
legacy/ALLIUM_signatures/: GenesSelectedNSCv2.csv  README.md
legacy/Notebooks_GEX_preprocessing/: 1_DataPreparation_Python.ipynb  2_Normalization_GeTMM_R.ipynb
legacy/Notebooks_predictions/: DiscoveryPhase_DNAm_Test_data.ipynb
legacy/outputs/: GEX_GEO_predictions.csv
outputs/: DNAm_GEO_predictions.csv
preprocessing/: 2_normalize.r  3_allium_format.py
tests/: test_dnam_classifier.py  test_gex_classifier.py  test_subtype.py
(+36 files in other folders)
