# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allium"
version = "v2.0.0"
description = "ALLIUM is a machine learning model that predicts subtypes of acute lymphoblastic leukemia (ALL)."
readme = "README.md"
authors = [
    { name = "Mariya Lysenkova Wiklander", email = "mariya.lysenkova@medsci.uu.se" }, 
    { name = "Olga Krali", email = "olga.krali@medsci.uu.se" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["transcriptomics", "epigenomics", "multi-omics", "machine learning", "cancer", "leukemia"]
dependencies = [
    "pandas >= 2.0.3",
    "pyyml >= 6.0.0"
]
requires-python = ">=3.8.10"

[project.optional-dependencies]
dev = ["pytest", "bumpver", "pip-tools", "freezegun", "flake8"]

[project.urls]
Homepage = "https://github.com/Molmed/allium"


[tool.bumpver]
current_version = "v2.0.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "{version}",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
